
Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Raise a warning when validating invoice with non default taxes
* Book currency exchange amount in dedicated account

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Always allow editing invoice reference, description and comment by accounting administrator
* Allow refreshing invoice report cache
* Set employee who validates and posts invoices
* Allow modification of invoice references when report is not cached
* Add cache on invoice's amounts

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Support payment with currency exchange
* Remove support for Python 3.7
* Add support for Python 3.11
* Warn when cancelling a move related to an invoice

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Support alternative payees on invoice

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Use invoice date to enforce sequence on customer invoice
* Prevent delete tax identifier used on invoice
* Raise a warning when validating supplier invoice with same reference
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Add warning to prevent posting invoices in the future
* Add wizard to reschedule lines to pay of invoices
* Create base tax line for manual taxes

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow using debt accounts on supplier invoices
* Add deductible rate of taxes to supplier invoice
* Add method to post invoices by batch
* Add payment term date in invoice