@@ -1,3 +1,4 @@
+* Add common payment terms
 
 Version 7.4.0 - 2024-11-04
 --------------------------
